# Reversi

./: .gitignore  CMakeLists.txt  README.md
resources/: Resources.qrc
resources/ui/: Board.qml  Cell.qml  Reversi.qml
source/: ReversiModel.cpp  ReversiModel.h  main.cpp
